fix: overflow-y

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,6 @@ body {
 
 .rowx{
 		display: flex;
-		overflow-y: hidden;
 }
 
 
